RESOLVED FIXED109479
The plug-in process connection manager doesn't need to be heap allocated
https://bugs.webkit.org/show_bug.cgi?id=109479
Summary The plug-in process connection manager doesn't need to be heap allocated
Anders Carlsson
Reported 2013-02-11 13:21:12 PST
The plug-in process connection manager doesn't need to be heap allocated
Attachments
Patch (3.27 KB, patch)
2013-02-11 13:23 PST, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2013-02-11 13:23:01 PST
Anders Carlsson
Comment 2 2013-02-11 13:27:33 PST
Note You need to log in before you can comment on or make changes to this bug.