The plug-in process connection manager doesn't need to be heap allocated https://bugs.webkit.org/show_bug.cgi?id=109479

Reviewed by Andreas Kling.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::WebProcess):
(WebKit::WebProcess::pluginProcessConnectionManager):
(WebKit::WebProcess::pluginProcessCrashed):
* WebProcess/WebProcess.h:
(WebKit):
(WebProcess):

git-svn-id: svn://svn.chromium.org/blink/trunk@142502 bbb929c8-8fbe-4397-9dbb-9b2b20218538