third_party/WebKit/Source/WebKit2/WebProcess/WebProcess.h
@@ -31,6 +31,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ChildProcess.h"
 #include "DownloadManager.h"
 #include "EventDispatcher.h"
+#include "PluginProcessConnectionManager.h"
 #include "ResourceCachesToClear.h"
 #include "SandboxExtension.h"
 #include "SharedMemory.h"
@@ -91,10 +92,6 @@ class NetworkProcessConnection;
 
 #if ENABLE(NETWORK_PROCESS)
 class WebResourceLoadScheduler;
-#endif
-
-#if ENABLE(PLUGIN_PROCESS)
-class PluginProcessConnectionManager;
 #endif
 
 class WebProcess : public ChildProcess, private CoreIPC::Connection::QueueClient, private DownloadManager::Client {
@@ -337,7 +334,7 @@ private:
 #endif
 
 #if ENABLE(PLUGIN_PROCESS)
-    PluginProcessConnectionManager* m_pluginProcessConnectionManager;
+    PluginProcessConnectionManager m_pluginProcessConnectionManager;
 #endif
 
 #if USE(SOUP)
